after tweet scraping

--- a/Projekt.ipynb
+++ b/Projekt.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 336,
    "id": "1775da1a",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,9 @@
       "Czas potrzebny na zebranie tweetow: 0:06:25.820106\n",
       "Liczba zebranych tweetow: 3251\n",
       "\n",
-      "tweety w jezyku angielskim:\n"
+      "tweety w jezyku angielskim:\n",
+      "Czas potrzebny na zebranie tweetow: 0:12:36.527835\n",
+      "Liczba zebranych tweetow: 11148\n"
      ]
     }
    ],
